# saga

./: .dockerignore  .gitmodules  .readthedocs.yaml  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: apptainer-image.yml  build-singularity.yml  docker-image.yaml  docker-image.yml  python3.13.yaml  python3.9.yaml  singularity-image.yml
alib/: CMakeLists.txt
alib/include/: analysis.h
alib/src/: getKinBinnedAsym1D.cpp
docker/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
docs/source/: aggregate.rst  conf.py  cpp.rst  data.rst  index.rst  orchestrate.rst  plot.rst  py.rst  rescale.rst
py/: Makefile  orchestrate.py
py/saga/: __init__.py  aggregate.py  aggregate_NEW.py  data.py  orchestrate.py  plot.py  rescale.py
py/tests/saga/: test_aggregate.py  test_data.py  test_orchestrate.py  test_plot.py
saga/: CMakeLists.txt
saga/include/: analysis.h  bins.h  data.h  hbanalysis.h  log.h  massfit.h  resolution.h  signal.h  util.h
saga/lib/: analysis.cpp  bins.cpp  data.cpp  hbanalysis.cpp  util.cpp
saga/src/: findBinLimits.cpp  findBinLims.cpp  getBinKinematics.cpp  getBinKinematicsTH1Ds.cpp  getBinKinematicsTH2Ds.cpp  getBinMigration.cpp  getKinBinnedAsym.cpp  getKinBinnedAsym1D.cpp  getKinBinnedHB.cpp  getKinBinnedResolutions.cpp
singularity/: saga.def
tutorials/: Test_libraries.ipynb  aggregate_jobs.py  aggregate_jobs_1D.py  aggregate_jobs_nested_kinematics.py  aggregate_jobs_nested_kinematics2d.py  findBinLims.yaml  getBinKinematics.yaml  getBinKinematicsTH1Ds.yaml  getBinKinematicsTH2Ds.yaml  getBinMigration.yaml  getKinBinnedAsym.yaml  getKinBinnedHB.yaml  getKinBinnedResolutions.yaml  orchestrate_jobs.py  orchestrate_jobs_1D.py  out_binscheme_binvars_2D.root  plot_binscheme2d.py  rescale_jobs.py
tutorials/results/: args.yaml  bin_mig_mat.csv  h1.root  submit.sh
tutorials/results_1D/: args.yaml  bin_mig_mat_binscheme.csv  submit.sh
tutorials/results_kinematics/: args.yaml  out_binscheme_kinematics.csv
tutorials/results_kinematics_hists/: out_binscheme_kinematics.root
tutorials/results_kinematics_hists_2D/: args.yaml  out_binscheme_kinematics.csv  out_binscheme_kinematics_2d.root  out_binscheme_kinematics_2d_pi.root  out_binscheme_kinematics_2d_pim.root  out_binscheme_kinematics_pi.csv  out_binscheme_kinematics_pim.csv
